k8s/back-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 4000
      targetPort: 4000
