k8s/back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
        - name: server
          image: elie91/starwars-back
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: back-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 4000
      targetPort: 4000
---
